# sat-solver

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SAT-SolverConfig.cmake  install-dependencies.bash
include/sat-solver/: formular.h  judgement.h  sat-solver.h  string-util.h  truth-table.h
libs/: CMakeLists.txt
src/: formular.c  judgement.c  sat-solver.c  string-util.c  truth-table.c
test/: judgement.c  truth-table.c
test/artifacts/truth-table/: and  literal  neg  or  three-vars
